# PyPoetry

./: LICENSE  README.md  main.py  setup.cfg
Pypoetry/: rhyme.py
