[metadata]
name = Pypoetry
version = 0.0.1
author = Beatrice Federici
author_email = beatrice.federici123@gmail.com
description = For generating rhyming words
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Beatrix-droid/PyPoetry
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
